# red_team_telebot

./: Dockerfile  docker-compose.yml  requirements.txt  setup.cfg
red_team_telebot/: __main__.py  admins.py  common.py  students.py  telegram.py
red_team_telebot/db/: __init__.py
