[metadata]
name = red_team_telebot
version = 0.0.1
author = Anton Klimanov (zinstack625)
author_email = klimanov625@outlook.com
description = Telegram bot for email credentials distribution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zinstack625/red_team_telebot
project_urls =
    Bug Tracker = https://github.com/zinstack625/red_team_telebot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    red_team_telebot
    red_team_telebot.db
python_requires = >=3.8
